tests/reference/asr-type_used_before_declared_01-aa81166.stderr
semantic error: Derived type `t_pair` is not defined
 --> tests/errors/type_used_before_declared_01.f90:2:5
  |
2 |     type(t_pair) :: x
  |     ^^^^^^^^^^^^ Type used here is not defined in any scope
